fixed button alignment for filter submit button in main dash

--- a/scarlet/cms/static/scarlet/compass/scss/admin/views/_admin.scss
+++ b/scarlet/cms/static/scarlet/compass/scss/admin/views/_admin.scss
@@ -350,6 +350,8 @@ section#main {
 			input[type='submit'] {
 				@include button;
 
+				vertical-align: top;
+
 				&.big {
 					@include big-button;
 				}
